# Joosc

./: .env  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Je_1_NonJoosConstructs_PrivateFields.java  Makefile  README.md  allow.txt  make_env.sh  run_docker.sh  run_fuzzer.sh  run_tests.sh  version.sh
bison/: example.yy  location.hh  output.cc  output.hh
fuzz/: CMakeLists.txt  Dockerfile  build.sh  fuzz_joosc.cc  fuzz_simple.cc  joosc_proto.proto  make_proto.sh  proto_to_joos.cc  protoc
fuzz/cmake/: protobuf.cmake
fuzz/corpus/: id:000026,src:000013,time:727844,execs:1121422,op:havoc,rep:1  id:000030,src:000013,time:730701,execs:1123540,op:havoc,rep:1  id:000046,src:000013+000039,time:741261,execs:1132464,op:splice,rep:1  id:000055,src:000002,time:743544,execs:1134189,op:havoc,rep:4  id:000056,src:000002,time:744976,execs:1135760,op:havoc,rep:1  id:000075,src:000041+000074,time:12729296,execs:17433854,op:splice,rep:1  id:000078,src:000002,time:13536691,execs:18496827,op:havoc,rep:2  id:000081,src:000067+000079,time:14933089,execs:20372661,op:splice,rep:1  id:000084,src:000082,time:30162960,execs:41106851,op:havoc,rep:2  id:000086,src:000082,time:30167258,execs:41112931,op:havoc,rep:1  id:000087,src:000083,time:30480401,execs:41515832,op:havoc,rep:1  id:000091,src:000090,time:40242467,execs:54501541,op:havoc,rep:2  id:000092,src:000090,time:40247913,execs:54503661,op:havoc,rep:1  id:000097,src:000095,time:40432417,execs:54677417,op:havoc,rep:2  id:000099,src:000002,time:77937719,execs:114594862,op:havoc,rep:4
fuzz/src/: joosc_proto.pb.cc  joosc_proto.pb.h  proto_to_joos.cc  proto_to_joos_main.cc
graphs/: Makefile
java-ir/ir/ast/: BinOp.java  CJump.java  Call.java  CompUnit.java  Const.java  ESeq.java  Exp.java  Expr.java  Expr_c.java  FuncDecl.java  Jump.java  Label.java  Mem.java  Move.java  Name.java  Node.java  NodeFactory.java  NodeFactory_c.java  Node_c.java  Return.java  Seq.java  Stmt.java  Temp.java
java-ir/ir/interpret/: Configuration.java  Main.java  Simulator.java
java-ir/ir/visit/: AggregateVisitor.java  CheckCanonicalIRVisitor.java  IRVisitor.java  InsnMapsBuilder.java
java-ir/util/: Copy.java  InternalCompilerError.java
src/: main.cc  main.h
src/AST/: ASTNode.h
src/IR/: code-gen-constants.cc  code-gen-constants.h  ir.h  ir_variant.h  ir_visitor.cc  ir_visitor.h
src/IR-builder/: ast-to-ir.cc  ast-to-ir.h  dispatch-vector.cc  dispatch-vector.h
src/IR-canonicalizer/: check-canonical.cc  check-canonical.h  concatenate.h  ir-canonicalizer.cc  ir-canonicalizer.h
src/IR-interpreter/IR-java-converter/: IR-java-converter.cc  IR-java-converter.h
src/IR-interpreter/execution-frame/: execution-frame.h
src/IR-interpreter/expr-stack/: expr-stack.cc  expr-stack.h
src/IR-interpreter/maps-builder/: maps-builder.cc  maps-builder.h
src/IR-interpreter/simulation/: simulation.cc  simulation.h
src/IR-interpreter/stack-item/: stack-item.cc  stack-item.h
src/IR-interpreter/util/: errors.h
src/IR-tiling/: assembly.cc  assembly.h  ir-tiling.cc  ir-tiling.h  simple-reg-alloc.cc  simple-reg-alloc.h  tile.cc  tile.h
src/IR-tiling/assembly/: assembly-common.cc  assembly-common.h  assembly-instruction.h  assembly-refactor.cc  assembly-refactor.h  assembly.h
src/IR-tiling/assembly-generator/: assembly-generator.cc  assembly-generator.h
src/IR-tiling/register-allocation/: brainless-allocator.cc  brainless-allocator.h  linear-scan.cc  linear-scan.h  noop-allocator.h  register-allocator.h
src/IR-tiling/tiling/: ir-tiling.cc  ir-tiling.h  tile.cc  tile.h
src/IR/bin-op/: bin-op.cc  bin-op.h
src/IR/call/: call.cc  call.h
src/IR/cjump/: cjump.cc  cjump.h
src/IR/comment/: comment.cc  comment.h
src/IR/comp-unit/: comp-unit.h
src/IR/const/: const.cc  const.h
src/IR/eseq/: eseq.cc  (+1 more)
src/add-location/: add-location.cc  add-location.h
src/ast/: ast.cc  ast.h
src/cfg-builder/: cfg-builder.cc  cfg-builder.h  cfg-deleter.h  cfg-visitor.cc  cfg-visitor.h
src/compiler/: compiler.cc  compiler.h
src/dead-assignment/: dead-assignment.cc  dead-assignment.h
src/disambiguation/: disambiguation.cc  disambiguation.h  forward-decl.cc  forward-decl.h  search-unclassified.h
src/environment-builder/: environment_class.cc  environment_class.h  environmentbuilder.cc  environmentbuilder.h  scope.cc  scope.h  symboltable.cc  symboltable.h  symboltableentry.cc  symboltableentry.h
src/exceptions/: compilerdevelopmenterror.h  exceptions.h  semanticerror.h
src/factorial/: factorial.cc
src/graph/: cfg-graph.cc  cfg-graph.h  graph.cc  graph.h  ir_graph.cc  ir_graph.h
src/hierarchy-checking/: hierarchy-checking.cc  hierarchy-checking.h
src/inheritance-ast/: ast.cc  ast.h  visitor.cc  visitor.h
src/interface-extender/: interface-extender.cc  interface-extender.h
src/lexer/: lexec.cc  lexer.flex  token.h
src/local-variables/: local-variable-visitor.cc  local-variable-visitor.h
src/parsing/: parseruser.cc  parseuser.h
src/reachability/: reachability.cc  reachability.h  reached-statement.cc  reached-statement.h  temp-reachability.cc  temp-reachability.h
src/type-checker/: typechecker.cc  typechecker.h
src/type-decl/: linkedtype.cc  linkedtype.h  type_declaration.h
src/type-linking/: compilation_unit_namespace.cc  compilation_unit_namespace.h  typelinker.cc  typelinker.h
src/utillities/: get_as_type_dec.cc  get_as_type_dec.h  overload.h  remove_duplicates.h  util.cc  util.h
src/variant-ast/: ast.h  astnode.h  astnodecommon.h  classes.cc  classes.h  expressions.cc  expressions.h  names.cc  names.h  packages.cc  packages.h  primitivetype.cc  primitivetype.h  statements.cc  statements.h  types.cc  types.h  visitor.cc  visitor.h
src/weeder/: astweeder.cc  astweeder.h  weeder.cc  weeder.h
tests/fuzzing/: .gitignore  Makefile  joosc.dict  run_afl.sh
tests/lexing/: lex_tester  lex_tester.cc  run_tests.sh
tests/libfuzzer/: CMakeLists.txt  Makefile  joosc_fuzzer.cc
tests/libfuzzer/proto_to_joos/: proto_to_joos.h
tests/libfuzzer/src/proto_to_joos/: proto_to_joos_main.cpp
tests/programs/: lol.txt
tests/src/: factorialtest.cc
(+340 files in other folders)
